# UprisingEmu

./: .gitignore  CMakeLists.txt  README.md
docs/: BootProcess.md
src/: main.cpp  main.h  types.h
src/core/: Starlet.cpp  Starlet.h  gekko.cpp  gekko.h  gekkoreg.cpp  gekkoreg.h  memory.cpp  memory.h
src/core/ARMInterpreter/: interpreter.cpp  interpreter.h
src/core/PPCInterpreter/: interpreter.cpp  interpreter.h  interpreter_branch.cpp  interpreter_branch.h  interpreter_integer.cpp  interpreter_integer.h  interpreter_loadstore.cpp  interpreter_loadstore.h  interpreter_system.cpp  interpreter_system.h  interpreter_tables.cpp  interpreter_tables.h
src/core/PPCInterpreter/debug/: debug.cpp  debug.h  debug_branch.cpp  debug_branch.h  debug_integer.cpp  debug_integer.h  debug_loadstore.cpp  debug_loadstore.h  debug_print.cpp  debug_print.h  debug_system.cpp  debug_system.h  debug_tables.cpp  debug_tables.h
src/core/hardware/: CoreTiming.cpp  CoreTiming.h  DSP.cpp  DSP.h  ExternalInterface.cpp  ExternalInterface.h  MI.cpp  MemoryInterface.cpp  MemoryInterface.h  PI.cpp  PI.h  ProcessorInterface.cpp  SerialInterface.cpp  SerialInterface.h
src/core/hardware/EXI/: EXI.cpp  EXI.h  EXI_Channel.cpp  EXI_Channel.h  EXI_Device.cpp  EXI_Device.h  EXI_DeviceAD16.cpp  EXI_DeviceAD16.h
src/core/interpreter/: debug.cpp  debug.h  interpreter.cpp  interpreter.h  interpreter_branch.cpp  interpreter_branch.h  interpreter_integer.cpp  interpreter_integer.h  interpreter_loadstore.cpp  interpreter_loadstore.h  interpreter_system.cpp  interpreter_system.h  interpreter_tables.cpp  interpreter_tables.h
src/core/interpreter/debug/: debug.cpp  debug.h  debug_branch.cpp  debug_branch.h  debug_integer.cpp  debug_integer.h  debug_loadstore.cpp  debug_loadstore.h  debug_print.cpp  debug_print.h  debug_system.cpp  debug_system.h  debug_tables.cpp  debug_tables.h
src/io/: file.cpp  file.h
